Arreglo en calcular intereses